package disk;

import "github.com/agl/pond/protos/pond.proto";

// These protobufs are used for serialising the client's state to disk.

message Contact {
	required fixed64 id = 1;
	required string name = 2;
	required bytes group_key = 3;
	optional int32 supported_version = 16;
	optional bytes key_exchange_bytes = 4;
	optional bytes their_group = 5;
	optional bytes my_group_key = 6;
	optional uint32 generation = 7;
	optional string their_server = 8;
	optional bytes their_pub = 9;
	optional bytes their_identity_public = 10;
	optional bytes last_private = 11;
	optional bytes current_private = 12;
	optional bytes their_last_public = 13;
	optional bytes their_current_public = 14;

	message PreviousTag {
		required bytes tag = 1;
		required int64 expired = 2;
	}
	repeated PreviousTag previous_tags = 17;

	optional bool is_pending = 15 [ default = false ];
}

message Inbox {
	required fixed64 id = 1;
	required fixed64 from = 2;
	required int64 received_time = 3;
	required bool acked = 4;
	optional bytes message = 5;
	required bool read = 6;
	optional bytes sealed = 7;
}

message Outbox {
	required fixed64 id = 1;
	required fixed64 to = 2;
	required string server = 3;
	required int64 created = 4;
	optional int64 sent = 5;
	optional bytes message = 6;
	optional bytes request = 7;
	optional int64 acked = 8;
	optional bool revocation = 9;
};

message Draft {
	required fixed64 id = 1;
	required int64 created = 2;
	optional fixed64 to = 3;
	required string body = 4;
	optional fixed64 in_reply_to = 5;
	repeated protos.Message.Attachment attachments = 6;
	repeated protos.Message.Detachment detachments = 7;
}

message State {
	required bytes identity = 1;
	required bytes public = 2;
	required bytes private = 3;
	required string server = 4;
	required bytes group = 5;
	required bytes group_private = 6;
	message PreviousGroup {
		required bytes group = 1;
		required bytes group_private = 2;
		required int64 expired = 3;
	}
	repeated PreviousGroup previous_group_private_keys = 12;

	required uint32 generation = 7;

	repeated Contact contacts = 8;
	repeated Inbox inbox = 9;
	repeated Outbox outbox = 10;
	repeated Draft drafts = 11;
}
